<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LucidityActivity!</string>
    <string name="app_name">Lucidity</string>
    <string name="register_btn">Register</string>
    <string name="your_name">Your Name</string>
    <string name="my_courses">My Courses</string>
    <string name="checking_registration">Checking registration status...</string>
    <string name="loading_unis">Loading universities...</string>
    <string name="add_courses">Add Courses</string>
    <string name="save_new_courses">Save</string>
    <string name="add_another_course">Add More</string>
    <string name="cancel">Cancel</string>
    <string name="connection_error">Error connecting to server!</string>
    <string name="upcoming">UPCOMING</string>
    <string name="past_due">PAST DUE</string>
    <string name="assignment_descrip">Assignment Description</string>
    <string name="due_date">Due Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_document">View Document</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="university_select_set">Set</string>
    <string name="university_server_not_found">Unable to connect to the university\'s Lucidity server. Pick another?</string>

    <string-array name="master_servers">
        <item>192.168.1.4</item>
        <item>192.168.1.3</item>
    </string-array>

    <string name="login_btn">Sign in</string>
    <string name="loading">Loading...</string>

</resources>