<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg" >

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/my_courses"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_vertical" />
        
        <Button
            android:id="@+id/btnCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawingCacheQuality="high"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Check In"
            android:textColor="#666666" />

    </LinearLayout>
    
    <!-- bottom border for header -->
   	<LinearLayout
        android:id="@+id/headerBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2b80cd" />
   	
   	<LinearLayout
        android:id="@+id/headerBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
   	
   		<LinearLayout
	        android:id="@+id/headerBorder"
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="#2577c8"
	        android:layout_weight="1" />
   	
	   	<TextView
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="right"
	   	    android:textStyle="bold"
	   	    android:padding="10dp"
	   	    android:textAppearance="?android:attr/textAppearanceMedium"
	   	    android:text="@string/upcoming" />
	   	
	</LinearLayout>
    
    <ListView
    	android:id="@+id/ListContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" />
    
    <LinearLayout
        android:id="@+id/headerBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
   	
   		<LinearLayout
	        android:id="@+id/headerBorder"
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="#2577c8"
	        android:layout_weight="1" />
	
	    <TextView
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="right"
	   	    android:textStyle="bold"
	   	    android:padding="10dp"
	   	    android:textAppearance="?android:attr/textAppearanceMedium"
	   	    android:text="@string/past_due" />
	    
	</LinearLayout>
    
    <ListView
    	android:id="@+id/ListContainer2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" />

</LinearLayout>