<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/WelcomeLayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/WelcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawingCacheQuality="high"
            android:src="@drawable/logo" />

        <ViewFlipper
            android:id="@+id/ViewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:inAnimation="@anim/fadein"
            android:outAnimation="@anim/fadeout" >

            <RelativeLayout
                android:id="@+id/LoadingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawingCacheQuality="high" />

                <TextView
                    android:id="@+id/txtLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progressBar1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/checking_registration"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/SelectContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnSelectLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawingCacheQuality="high"
                    android:text="@string/login_btn" />

                <Button
                    android:id="@+id/btnSelectRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/btnSelectLogin"
                    android:layout_below="@id/btnSelectLogin"
                    android:layout_marginTop="10dp"
                    android:drawingCacheQuality="high"
                    android:text="@string/register_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LoginContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <AutoCompleteTextView
                    android:id="@+id/autocompleteUniversities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:completionThreshold="2"
                    android:drawingCacheQuality="high"
                    android:hint="Your University" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/autocompleteUniversities"
                    android:layout_below="@id/autocompleteUniversities"
                    android:layout_marginTop="10dp"
                    android:drawingCacheQuality="high"
                    android:text="@string/login_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RegisterContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:drawingCacheQuality="high"
                    android:hint="Your First &amp; Last Names"
                    android:inputType="textPersonName" />

                <AutoCompleteTextView
                    android:id="@+id/acUni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtName"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:completionThreshold="2"
                    android:drawingCacheQuality="high"
                    android:hint="Your University" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/acUni"
                    android:layout_below="@id/acUni"
                    android:layout_marginTop="10dp"
                    android:drawingCacheQuality="high"
                    android:text="@string/register_btn" />
            </RelativeLayout>
        </ViewFlipper>
    </RelativeLayout>

</RelativeLayout>